Fix icon bar size on mobile and orange header size

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -19,12 +19,12 @@ $ace-orange : #E45226;
   position: fixed;
   bottom: 0;
   width: 100%;
-  height: 100px; /* choose any height */
+  height: 20%;
 }
 
 .orange-bar{
   top: 0;
   background-color: $ace-orange;
   width: 100%;
-  height: .5%;
+  height: 1%;
 }
